data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1266.wast
;; 7. **Loop with Imported Function Handling Complex Types**:    - **Description**: A loop in module A interacts with an imported function from module B that deals with complex types (e.g., vectors or structs). The `br_if` branches inside the loop depending on operations performed in the imported function.    - **Constraint**: Validate type safety and stack management when handling complex types across the loop and the imported function.

(assert_invalid
  (module
    (import "moduleB" "func" (func $importedFunc (param i32) (result i32)))
    (func $testFunc (result i32)
      (i32.const 0)
      (loop (result i32)
        (call $importedFunc (i32.const 10))
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)